--- a/views/businessprofile.ejs
+++ b/views/businessprofile.ejs
@@ -10,7 +10,7 @@
     <div id="page-wrapper">
             <div class="container jumbotron">
               <h2 class="text-center">Create User Profile</h2>
-            <form id="business_profile" role="form" action="/businessprofile" method="post" class="form-horizontal col-lg-12" data-toggle="validator"enctype="multipart/form-data">
+            <form id="business_profile" role="form" action="/businessprofile" method="post" class="form-horizontal col-lg-12" data-toggle="validator">
             <fieldset>
                 <!-- Address form -->
                 <legend>Business Information</legend>
