--- a/views/partials/scriptsloader.ejs
+++ b/views/partials/scriptsloader.ejs
@@ -5,15 +5,14 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!-- Material Design Core JavaScript -->
-<script src="/public/js/material.min.js"></script>
-<script src="/public/js/ripples.min.js"></script>
+<script src="https://cdn.jsdelivr.net/g/bootstrap.material-design@0.5.9(js/material.min.js+js/ripples.min.js)"></script>  
 
-<!-- Initializing Material Design -->
+<!-- Initializing Material Design  -->
 <script>$.material.init()</script>
-
-<!-- HandyGuy Custom -->
-<script src="/public/js/pluggins/handy.js"></script>
 
 <!-- Validator for from validation -->
 <script src="/public/js/pluggins/validator.js"></script>
+
+<!-- HandyGuy Custom -->
+<script src="/public/js/main.js"></script>
 
