--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
 </head>
 <!-- LOGIN FORM -->
-<body data-vide-bg="/public/video/ocean">
+<body data-vide-bg="/public/bg-video/ocean">
   <div id="wrapper">
       <div class="container-fluid">
             <div class="row vertical-offset-100">
