--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <title>Welcome to Handy Guy Billing Buddy</title>
-    <!-- custom CSS
-    <link rel="stylesheet" href="/public/css/pluggins/login.css">-->
    <% include ./partials/head %>
-
+   
 </head>
 <!-- LOGIN FORM -->
-<body data-vide-bg="/public/video/ocean">
+<body data-vide-bg = "/public/bg-video/ocean">
   <div id="wrapper">
-      <div class="container-fluid">
+     <div class="container-fluid">
             <div class="row vertical-offset-100">
                 <div class="col-md-4 col-md-offset-4">
                     <div class="panel panel-default">
@@ -32,7 +30,7 @@
                          %>
                         <!-- Error Message ends if wrong Password -->
                         <div class="form-group">
-                            <legend class ="text-center"><h1>Sign In</h1></legend>
+                            <legend class ="text-center"><i class="material-icons md-48 orange600">account_circle</i><h3>Sign In </h3></legend>
                             <label for="inputEmail label-floating" class="col-md-2 control-label">Email</label>
                       <div class="col-md-10">
                         <input type="email" class="form-control" id="email" name="email" autocomplete="on">
@@ -65,13 +63,13 @@
             </div> <!-- pannel -->
             </div> <!-- col-offset -->
         </div><!-- row -->
-    </div><!-- container -->
+   </div> <!--container -->
   </div> <!-- wrapper -->
-
 
 <!-- Scripts -->
 <% include ./partials/scriptsloader %>
-<!-- HandyGuy Custom -->
+<!-- Video Pluggin -->
 <script src="/public/js/pluggins/jquery.vide.js"></script>
+
 </body>
 </html>
