--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,14 +12,14 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 <!-- Bootstrap Material Design -->
-<link rel="stylesheet" type="text/css" href="/public/css/bootstrap-material-design.css">
-<link rel="stylesheet" type="text/css" href="/public/css/ripples.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/g/bootstrap.material-design@0.5.9(css/bootstrap-material-design.min.css+css/ripples.min.css)">
 
-<!-- Bootstrap Material Design -->
-<link rel="stylesheet" type="text/css" href="/public/css/handy.css">
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+<!-- Handy CSS -->
+<link rel="stylesheet" type="text/css" href="/public/css/handy.css">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
