--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,17 +11,17 @@
         </div>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= user.local.email %><b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="material-icons">account_circle</i><%= user.local.email %><i class="material-icons">arrow_drop_down</i></a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-user"></i> Change Password</a>
+                        <a href="/changepassword"><i class="material-icons">security</i> Change Password</a>
                     </li>
                     <li>
-                        <a href="/userprofile"><i class="fa fa-fw fa-gear"></i> Profile Settings</a>
+                        <a href="/userprofile"><i class="material-icons">settings</i> Profile Settings</a>
                     </li>
                     <!--<li class="divider"></li>-->
                     <li>
-                        <a href="/login"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                        <a href="/login"><i class="material-icons">power_settings_new</i> Log Out</a>
                     </li>
                 </ul>
             </li>
@@ -30,14 +30,14 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
             <ul class="nav navbar-nav side-nav">
                 <li>
-                  <a href="neworder.ejs"><i class="fa fa-fw fa-user-plus"></i> New Work Order</a>
+                  <a href="/neworder"><i class="fa fa-fw fa-user-plus"></i> New Order</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-fw fa-calendar"></i> My Calendar </a>
+                    <a href="/mycalendar"><i class="fa fa-fw fa-calendar"></i> My Calendar </a>
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa fa-fw fa-tasks"></i> My Jobs </a>
+                    <a href="/myorders"><i class="fa fa-fw fa-tasks"></i> My Orders </a>
                 </li>
 
             </ul>
