--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,13 +7,13 @@
 
 </head>
 <!-- Sign Up FORM -->
-<body data-vide-bg="/public/video/ocean">
+<body data-vide-bg= "/public/bg-video/ocean">
   <div id="wrapper">
       <div class="container-fluid">
             <div class="row vertical-offset-100">
                 <div class="col-md-4 col-md-offset-4">
                     <div class="panel panel-default">
-                        <div class="panel-body">
+                      <div class="panel-body">
 
                         <form accept-charset="UTF-8" role="form" action="/signup" method="post" id="signupform" class="form-horizontal" data-toggle="validator">
                         
@@ -30,20 +30,20 @@
                             </div>
                             <% } 
                          %>
-                        <!-- Error Message ends if account Already Exists -->
+                        <!-- Error Message ends if account Already Exists-->
                     <div class="form-group">
                     <legend class ="text-center"><h1>Create a New Account</h1></legend>
                       <label for="first_name label-floating" class="col-md-2 control-label">First Name</label>
 
                       <div class="col-md-10">
                         <input type="text" class="form-control" id="first_name" name="first_name" autocomplete="on" required>
-                        </div>
+                      </div>
                     </div>
                     <div class="form-group">
                       <label for="last_name label-floating" class="col-md-2 control-label">Last Name</label>
                       <div class="col-md-10">
                         <input type="text" class="form-control" id="last_name" name="last_name" autocomplete="on" required>
-                        </div>
+                      </div>
                     </div>
                     <div class="form-group">
                       <label for="email label-floating" class="col-md-2 control-label">Email</label>
@@ -73,10 +73,11 @@
                     <div class="form-group text-center">
                         <p class="text-info"><a href="/login">Already Have Account? Sign In</a></p>
                     </div>
-                    </div>
+                    
+
                     </fieldset>
                     </form>
-                </div>
+                </div><!-- pannel-body -->
             </div> <!-- pannel -->
             </div> <!-- col-offset -->
         </div><!-- row -->
@@ -86,6 +87,8 @@
 
 <!-- Scripts -->
 <% include ./partials/scriptsloader %>
+<!-- Video Pluggin -->
 <script src="/public/js/pluggins/jquery.vide.js"></script>
+
 </body>
 </html>
