--- a/views/businessservices.ejs
+++ b/views/businessservices.ejs
@@ -30,7 +30,7 @@
               <span class="input-group-btn">
                   <button class="btn btn-primary" ng-click="addService(fieldValue.serviceName,fieldValue.serviceAmount)" type="button"><span
                   class="glyphicon glyphicon-plus"></span>Add More</button>
-                  <button class="btn btn-lg btn-raised btn-success" ng-submit="saveService()" type="button">Save</button>
+                  <button class="btn btn-lg btn-raised btn-success" ng-click="saveService()" type="button">Save</button>
               </span>
             </div>
           </div>
