--- a/views/businessservices.ejs
+++ b/views/businessservices.ejs
@@ -48,8 +48,8 @@
                 </thead>
                 <tbody>
                   <tr ng-repeat="service in services">
-                    <td>{{service.name}}</td>
-                    <td>{{service.amount}}</td>
+                    <td>{{service.serviceName}}</td>
+                    <td>{{service.serviceAmount}}</td>
                     <td>
                       <div>
                           <span>
