--- a/views/neworder.ejs
+++ b/views/neworder.ejs
@@ -11,7 +11,7 @@
     <div id="page-wrapper">
             <div class="container jumbotron">
               <h2 class="text-center">Create New Order</h2>
-            <form id="new_order" role="form" action="/new_order" method="post" class="form-horizontal col-lg-12" data-toggle="validator"enctype="multipart/form-data">
+            <form id="new_order" role="form" action="/neworder" method="post" class="form-horizontal col-lg-12" data-toggle="validator">
             <fieldset>
                 <!-- Address form -->
                 <legend>Client Information</legend>
