--- a/views/orderdetails.ejs
+++ b/views/orderdetails.ejs
@@ -11,20 +11,21 @@
   <div id="wrapper">
     <% include ./partials/navbar %>
       <div class="container jumbotron bootstrap-iso">
-          <form class="form-horizontal" method="post">
+          <form class="form-horizontal" role="form" action="/orderdetails" method="post">
           <fieldset>
           <legend>Select the Services</legend>
           <div class="form-group">
             <ul class="list-group">
+            <% services.forEach(function(service, index) { %>
               <li class="list-group-item">
                   <div class="checkbox col-lg-8 col-md-8 col-xs-12">
                     <label>
-                        <input type="checkbox"> Name of Service1
+                        <input type="checkbox" name="services__<%= service._id %>"> <%= service.serviceName %>
                     </label>
                   </div>
                   <div class= "text-center pull-xs-right select col-lg-4 col-md-4 col-xs-12">
                         <label class="redlabel" for"select111"> Qty</label>
-                        <select id="select111" class="form-control">
+                        <select id="select111" name="quantity__<%= service._id %>" class="form-control">
                           <option>1</option>
                           <option>2</option>
                           <option>3</option>
@@ -33,8 +34,9 @@
                         </select>
                   </div>    
               </li>
+               <% }); %>
               
-              <li class="list-group-item">
+            <!--   <li class="list-group-item">
                   <div class="checkbox col-lg-8 col-md-8 col-xs-12">
                     <label>
                         <input type="checkbox"> Name of Service2
@@ -50,9 +52,9 @@
                           <option>5</option>
                         </select>
                   </div>    
-              </li>
+              </li> -->
               
-              <li class="list-group-item">
+             <!--  <li class="list-group-item">
                   <div class="checkbox col-lg-8 col-md-8 col-xs-12">
                     <label>
                         <input type="checkbox"> Name of Service3
@@ -86,13 +88,13 @@
                           <option>5</option>
                         </select>
                   </div>    
-              </li>
+              </li> -->
             <ul>  
             </div> 
             <div class="form-group">
                 <div class="col-lg-8 col-md-8 col-xs-12">
                   <h4>Additional Services Performed</h4>
-                      <input class="form-control" type="text" placeholder="Service Name">
+                      <input class="form-control" name="additional" type="text" placeholder="Service Name">
                 </div>
                 <div class= "text-center pull-xs-right select col-lg-4 col-md-4 col-xs-12">
                     <label for"select23"> Qty</label>
@@ -108,7 +110,7 @@
             <div class="form-group">
               <div class="col-lg-12">
                 <h4>Notes</h4>
-                        <textarea class="form-control" rows="3"></textarea>
+                        <textarea class="form-control" name="notes" rows="3"></textarea>
               </div>
             </div>
             <div class="form-group">
@@ -118,14 +120,14 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <!-- <div class="form-group">
               <div class="col-lg-12">
                   <h4>Upload Pictures</h4>
                   <input id="input-700" name="kartik-input-700[]" type="file" multiple class="file-loading">
                     
 
               </div>
-            </div>
+            </div> -->
 
             <div class="form-group form-actions">
                 <div class="col-md-10 col-md-offset-2">
@@ -143,7 +145,7 @@
 <% include ./partials/scriptsloader %>
 
 <!-- Pluggin for photo uploader -->
-<script src="public/js/pluggins/canvas-to-blob.js" type="text/javascript"></script>
+<!-- <script src="public/js/pluggins/canvas-to-blob.js" type="text/javascript"></script>
 <script src="public/js/pluggins/fileinput.js"></script>
 <script>
         $("#input-700").fileinput({
@@ -152,7 +154,7 @@
             maxFileCount: 5
         });
         </script>
-
+ -->
 
 <!-- Bootstrap Date-Picker Plugin -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
