--- a/views/myorders.ejs
+++ b/views/myorders.ejs
@@ -45,10 +45,10 @@
 					  </tfoot>
 				  <tbody>
 				    <tr data-toggle="modal" data-target="#receipt">
-				      <td>11/13/2016</td>
-				      <td>James</td>
-				      <td>31.53</td>
-				      <td>Incomplete
+				      <td>4/21/2016</td>
+				      <td>CSUF</td>
+				      <td>60.94</td>
+				      <td>Complete
 				      	
 				      </td>
 				    </tr>
@@ -72,7 +72,7 @@
 				      <td>11/10/2015</td>
 				      <td>James</td>
 				      <td>37.53</td>
-				      <td>Complete</td>
+				      <td>Incomplete</td>
 				    </tr>
 				  </tbody>
 				</table> 
@@ -89,15 +89,29 @@
 						            <div class="row"> -->
 						                <div class="col-xs-6 col-sm-6 col-md-6">
 						                    <address>
-						                        <br>James's Car Wash</strong>
+						                        <strong>Dipesh's Car Wash
+						                        </strong>
 						                        <br>
-						                        2135 Sunset Blvd
+						                        2307 E Ball Rd
 						                        <br>
-						                        Los Angeles, CA 90026
+						                        Anaheim, CA 92806
 						                        <br>
-						                        <abbr title="Phone">P:</abbr> (213) 484-6829
+						                        <abbr title="Phone">P:</abbr> (714) 388-8259
 						                        <br>
-						                        Date: 1st November, 2013
+						                        
+
+						                        <br>
+						                        <strong>
+						                        Customer's Information
+						                        </strong>
+						                        <br>
+						                        CSUF
+						                        <br>
+						                        Fullerton, CA 90000
+						                        <br>
+						                        <abbr title="Phone">P:</abbr> (714)000 0000
+						                        <br>
+						                        Date: 21st April, 2016
 						                    </address>
 
 						                </div>
@@ -123,22 +137,22 @@
 						                    </thead>
 						                    <tbody>
 						                        <tr>
-						                            <td class="col-md-9"><em>Premium Car Wash</em>
+						                            <td class="col-md-9"><em>Express Car Wash</em>
 						                            <td class="col-md-1" style="text-align: center"> 2 </td>
-						                            <td class="col-md-1 text-center">$13</td>
-						                            <td class="col-md-1 text-center">$26</td>
+						                            <td class="col-md-1 text-center">$20</td>
+						                            <td class="col-md-1 text-center">$40</td>
 						                        </tr>
 						                        <tr>
-						                            <td class="col-md-9"><em>Tire Cleaning</em></td>
+						                            <td class="col-md-9"><em>Basic Car wash</em></td>
 						                            <td class="col-md-1" style="text-align: center"> 1 </td>
-						                            <td class="col-md-1 text-center">$8</td>
-						                            <td class="col-md-1 text-center">$8</td>
+						                            <td class="col-md-1 text-center">$15</td>
+						                            <td class="col-md-1 text-center">$15</td>
 						                        </tr>
 						                        <tr>
-						                            <td class="col-md-9"><em>Waxing Interior</em>
+						                            <td class="col-md-9"><em>Ultimate CAr wash</em>
 						                            <td class="col-md-1" style="text-align: center"> 3 </td>
-						                            <td class="col-md-1 text-center">$16</td>
-						                            <td class="col-md-1 text-center">$48</td>
+						                            <td class="col-md-1 text-center">$10</td>
+						                            <td class="col-md-1 text-center">$30</td>
 						                        <tr>
 						                            <td>   </td>
 						                            <td>   </td>
@@ -151,17 +165,17 @@
 						                            </p></td>
 						                            <td class="text-center">
 						                            <p>
-						                                <strong>$6.94</strong>
+						                                <strong>$60.00</strong>
 						                            </p>
 						                            <p>
-						                                <strong>$6.94</strong>
+						                                <strong>$0.94</strong>
 						                            </p></td>
 						                        </tr>
 						                        <tr>
 						                            <td>   </td>
 						                            <td>   </td>
 						                            <td class="text-right"><h4><strong>Total: </strong></h4></td>
-						                            <td class="text-center text-danger"><h4><strong>$31.53</strong></h4></td>
+						                            <td class="text-center text-danger"><h4><strong>$60.94</strong></h4></td>
 						                        </tr>
 						                    </tbody>
 						                </table>
@@ -169,8 +183,9 @@
 						    </div>
 					      </div>
 					      <div class="modal-footer">
-					        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					        <button type="button" class="btn btn-primary">Print</button>
+					        <button type="button" class="btn btn-raised btn-danger" data-dismiss="modal">Close</button>
+					        <button type="button" class="btn btn-raised btn-primary">Print</button>
+					        <button type="button" class="btn btn-raised btn-info">Email</button>
 					      </div>
 					    </div>
 					  </div>
