--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,7 +17,7 @@
                         <a href="/changepassword"><i class="material-icons">security</i> Change Password</a>
                     </li>
                     <li>
-                        <a href="/userprofile"><i class="material-icons">settings</i> Profile Settings</a>
+                        <a href="/businessprofile"><i class="material-icons">settings</i> My Profile</a>
                     </li>
                     <!--<li class="divider"></li>-->
                     <li>
