--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -20,7 +20,7 @@
                     <label for="business_name" class="control-label col-md-2">Business Name</label>
                     <!-- Place Holder for Business Name-->
                     <div class="col-md-10">
-                        <p class="lead"></p>
+                        <p class="lead"><%= profile.business_name %></p>
                     </div>
                 </div>
                 <!-- Phone input-->
